[package]
name = "snyk_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
reqwest = "0.11.14"
snyk_data = { path = "../snyk_data" }
structopt = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
