[package]
name = "snyk_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
snyk_data = { path = "../snyk_data" }
structopt = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
