[package]
name = "snyk_data"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
chrono = { version = "0.4.22", features = ["serde"] }
reqwest = { version = "0.11.11", features = ["json"] }
thiserror = "1.0.34"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
url = { version = "2.3.1", features = ["serde"] }
